--- a/Zadanie 17_p1_lesz.html
+++ b/Zadanie 17_p1_lesz.html
@@ -17,6 +17,6 @@
     <br>
     <span>Tekst w SPAN bez stylów.</span>
   </div>
-  <!-- Dominik Morawski -->
+  <!-- Martyna Leszczyńska -->
 </body>
 </html>
