--- a/start.html
+++ b/start.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1 align="center">Tech nr 13 Gdańsk<br>To super szkoła<br>Gdańsk, 19 marca 2025 r.</h1>
-    <marquee bgcolor="red">Dominik Morawski Pozdrawia</marquee>
+    <marquee bgcolor="red">Martyna Leszczyńska Pozdrawia</marquee>
 </body>
 </html>
