--- a/zadanie12_lesz.html
+++ b/zadanie12_lesz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Morawski Dominik 19.03.25 -->
+<!-- Martyna Leszczyńska  19.03.25 -->
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
