--- a/zadanie16_lesz.html
+++ b/zadanie16_lesz.html
@@ -25,6 +25,6 @@
      <b>Liniowe:</b> span, a, b, i, u, img, input<br>
      <b>Liniowo-blokowe:</b> button, textarea</p>
 
-  <!-- Dominik Morawski -->
+  <!-- Martyna Leszczyńska  -->
 </body>
 </html>
