--- a/zadanie17_p2_lesz.html
+++ b/zadanie17_p2_lesz.html
@@ -11,6 +11,6 @@
     </span>
     <p>A to jest akapit (element blokowy) w ramach DIV.</p>
   </div>
-  <!-- Dominik Morawski -->
+  <!-- Martyna Leszczyńska -->
 </body>
 </html>
