--- a/zadanie18_lesz.html
+++ b/zadanie18_lesz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Zadanie 18 - Morawski</title>
+  <title>Zadanie 18 - Martyna Leszczyńska </title>
 </head>
 <body>
   <div style="background-color: silver; width: 998px; padding: 10px;">
@@ -29,6 +29,6 @@
       <li style="color: red;">Element 2</li>
     </ul>
   </div>
-  <!-- Dominik Morawski -->
+  <!-- Martyna Leszczyńska  -->
 </body>
 </html>
