--- a/zadanie18_lesz_kod.html
+++ b/zadanie18_lesz_kod.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Kod Zadania 18 - Morawski</title>
+  <title>Kod Zadania 18 - Martyna Leszczyńska </title>
 <h1> KOD ZADANIA 18 </h1>
 </head>
 <body style="background-color: white;">
