--- a/zadanie19_lesz.html
+++ b/zadanie19_lesz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Zadanie 19 - Morawski</title>
+  <title>Zadanie 19 - Martyna Leszczyńska </title>
 </head>
 <body>
   <div style="background-color: silver; padding: 20px;">
