--- a/zadanie20_lesz.html
+++ b/zadanie20_lesz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Zadanie 20 - Morawski</title>
+  <title>Zadanie 20 - Martyna Leszczyńska </title>
 </head>
 <body>
   <!-- Blok 1 -->
@@ -36,6 +36,6 @@
       </li>
     </ol>
   </div>
-  <!-- Dominik Morawski -->
+  <!-- Martyna Leszczyńska -->
 </body>
 </html>
