--- a/zadanie21_lesz.html
+++ b/zadanie21_lesz.html
@@ -72,6 +72,6 @@
   <p id="pochyly">Blok tekstu o kolorze zielonym i czcionce 20pt</p>
   <p>Blok tekstu o kolorze zielonym i czcionce 14pt</p>
 
-  <!-- Dominik Morawski -->
+  <!-- Martyna Leszczyńska -->
 </body>
 </html>
