--- a/index.html
+++ b/index.html
@@ -22,20 +22,9 @@
 <table width=95% border="1" align="center">
  <tr>
  <td width=18% align=center>
-<marquee class="blink">Dominik Morawski</marquee>
+<marquee class="blink">Martyna Leszczyńska </marquee>
 <align="center"><font color=green>Linki do zadań</font><br>
 <font color=cyan>
-<a href="zadanie2_morawski.html" target="strony">zadanie 2</a><br>
-<a href="zadanie3_morawski.html" target="strony">zadanie 3</a><br>
-<a href="zadanie4_morawski.html" target="strony">zadanie 4</a><br>
-<a href="mora_z5_1.html" target="strony">Z5-importowany</a><br>
-<a href="mora_z5_2.html" target="strony">Z5-zewnętrzny</a><br>
-<a href="mora_z5_3.html" target="strony">Z5-wewnętrzna</a><br>
-<a href="mora_z5_4.html" target="strony">Z5-liniowy</a><br>
-<a href="mora_z6.html" target="strony">zadanie 6</a><br>
-<a href="zadanie7_morawski.html" target="strony">zadanie 7</a><br>
-<a href="zadanie8_morawski.html" target="strony">zadanie 8</a><br>
-<a href="zadanie9_morawski.html" target="strony">zadanie 9</a><br>
 <a href="zadanie10_morawski.html" target="strony">zadanie 10</a><br>
 <a href="zadanie11_morawski.html" target="strony">zadanie 11</a><br>
 <a href="zadanie12_morawski.html" target="strony">zadanie 12</a><br>
@@ -60,10 +49,6 @@
  </td>
  <td width=18% align=center><font color=cyan>Linki do kodów zadań<br>
   <a href="start.html" target="strony">start</a><br>
-<a href="kod_z5_1.html" target="strony">Z5-importowany</a><br>
-<a href="kod_z5_2.html" target="strony">Z5-zewnętrzny</a><br>
-<a href="kod_z5_3.html" target="strony">Z5-wewnętrzna</a><br>
-<a href="kod_z5_4.html" target="strony">Z5-liniowy</a><br>
 <a href="kod_z13.html" target="strony">Zadanie 13</a><br>
 <a href="kod_z15.html" target="strony">Zadanie 15</a><br>
 <a href="zadanie18_mora_kod.html" target="strony">Zadanie 18</a><br>
