--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 <marquee class="blink">Martyna Leszczyńska </marquee>
 <align="center"><font color=green>Linki do zadań</font><br>
 <font color=cyan>
-<a href="zadanie10_morawski.html" target="strony">zadanie 10</a><br>
-<a href="zadanie11_morawski.html" target="strony">zadanie 11</a><br>
-<a href="zadanie12_morawski.html" target="strony">zadanie 12</a><br>
-<a href="zadanie13_mora.html" target="strony">zadanie 13</a><br>
-<a href="zadanie14_morawski.html" target="strony">zadanie 14</a><br>
-<a href="zadanie15_mora.html" target="strony">zadanie 15</a><br>
-<a href="zadanie16_mora.html" target="strony">zadanie 16</a><br>
-<a href="Zadanie 17_p1_mora.html" target="strony">zadanie 17 p1</a><br>
-<a href="zadanie17_p2_mora.html" target="strony">zadanie 17 p2</a><br>
-<a href="zadanie18_mora.html" target="strony">zadanie 18</a><br>
-<a href="zadanie19_mora.html" target="strony">zadanie 19</a><br>
-<a href="zadanie20_mora.html" target="strony">zadanie 20</a><br>
-<a href="zadanie21_mora.html" target="strony">zadanie 21</a><br>
-<a href="zadanie22_mora.html" target="strony">zadanie 22</a><br>
-<a href="zadanie23_mora.html" target="strony">zadanie 23</a><br>
+<a href="zadanie10_lesz.html" target="strony">zadanie 10</a><br>
+<a href="zadanie11_lesz.html" target="strony">zadanie 11</a><br>
+<a href="zadanie12_lesz.html" target="strony">zadanie 12</a><br>
+<a href="zadanie13_lesz.html" target="strony">zadanie 13</a><br>
+<a href="zadanie14_lesz.html" target="strony">zadanie 14</a><br>
+<a href="zadanie15_lesz.html" target="strony">zadanie 15</a><br>
+<a href="zadanie16_lesz.html" target="strony">zadanie 16</a><br>
+<a href="Zadanie 17_p1_lesz.html" target="strony">zadanie 17 p1</a><br>
+<a href="zadanie17_p2_lesz.html" target="strony">zadanie 17 p2</a><br>
+<a href="zadanie18_lesz.html" target="strony">zadanie 18</a><br>
+<a href="zadanie19_lesz.html" target="strony">zadanie 19</a><br>
+<a href="zadanie20_lesz.html" target="strony">zadanie 20</a><br>
+<a href="zadanie21_lesz.html" target="strony">zadanie 21</a><br>
+<a href="zadanie22_lesz.html" target="strony">zadanie 22</a><br>
+<a href="zadanie23_lesz.html" target="strony">zadanie 23</a><br>
 
 
 </font>
@@ -51,7 +51,7 @@
   <a href="start.html" target="strony">start</a><br>
 <a href="kod_z13.html" target="strony">Zadanie 13</a><br>
 <a href="kod_z15.html" target="strony">Zadanie 15</a><br>
-<a href="zadanie18_mora_kod.html" target="strony">Zadanie 18</a><br>
+<a href="zadanie18_lesz_kod.html" target="strony">Zadanie 18</a><br>
  </td>
  </tr>
 </table>
