--- a/kod_z13.html
+++ b/kod_z13.html
@@ -7,7 +7,7 @@
 
     <h1>KOD HTML</h1>
     <textarea rows="20" cols="120">
-<!-19.03.25 Morawski-!>
+<!-19.03.25 martyna-!>
 
 <html>
 <head>
@@ -31,7 +31,7 @@
 
  <h2>KOD CSS</h2>
 <textarea rows="18" cols="30">
-/* 19.03.25 Morawski */
+/* 19.03.25 Martyna*/
 
 body{
 
