--- a/kod_z15.html
+++ b/kod_z15.html
@@ -1,5 +1,5 @@
 <html>
-<!-Dominik Morawski, 19.03.2025>
+<!- Martyna Leszczynska, 19.03.2025>
  <head>
     <meta charset="UTF-8">
     <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
@@ -8,7 +8,7 @@
 
     <h1>KOD HTML</h1>
     <textarea rows="20" cols="120">
-<!-19.03.25 Morawski-!>
+<!-19.03.25 Martyna-!>
 
 <html>
 <head>
@@ -16,7 +16,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
-                       <LINK href="mora_z15.css" rel="stylesheet" type="text/CSS"> 
+                       <LINK href="lesz_z15.css" rel="stylesheet" type="text/CSS"> 
             
 </head>
 <body>
@@ -33,7 +33,7 @@
 
  <h2>KOD CSS</h2>
 <textarea rows="18" cols="30">
-/* 19.03.25 Morawski */
+/* 19.03.25 Leszczynska */
 
 body{
 
