--- a/zadanie23_lesZ.html
+++ b/zadanie23_lesZ.html
@@ -8,43 +8,43 @@
 <body>
 
     <p id="pogrubienie_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Dlaczego programiści mylą Halloween z Bożym Narodzeniem?<br>
         Bo OCT 31 = DEC 25.
     </p>
 
     <p id="pochylona_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Programista wraca do domu. Żona mówi: „Kup chleb. A jak będą jajka, to kup 10.”<br>
         Wrócił z 10 bochenkami chleba. Były jajka.
     </p>
 
     <p id="index_gorny_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Co mówi programista, gdy się boi?<br>
         „404 – Fear not found!”
     </p>
 
     <p id="index_dolny_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Jak nazywa się kot programisty?<br>
         Scratch!
     </p>
 
     <p id="mono_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Ilu programistów potrzeba do wymiany żarówki?<br>
         Żadnego – to problem sprzętowy.
     </p>
 
     <p id="powiekszenie_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Dlaczego Java nie potrafi pływać?<br>
         Bo ma za dużo klas.
     </p>
 
     <p id="pomniejszenie_morawski">
-        Morawski<br>
+        Leszczynska<br>
         Co mówi komputer, kiedy mu zimno?<br>
         „Zamykam okna.”
     </p>
