--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
  </td>
  <td width=18% align=center><font color=cyan>Linki do kodów zadań<br>
   <a href="start.html" target="strony">start</a><br>
-<a href="kod_14.html" target="strony">kod do zad 14</a><br>
+<a href="kod_z13.html" target="strony">kod do zad 13</a><br>
+<a href="kod_z15.html" target="strony">kod do zad 15</a><br>
+
 
  </tr>
 </table>
