--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <a href="zadanie20_lesz.html" target="strony">zadanie 20</a><br>
 <a href="zadanie21_lesz.html" target="strony">zadanie 21</a><br>
 <a href="zadanie22_lesz.html" target="strony">zadanie 22</a><br>
+<a href="leszc_z24.html" target="strony">zadanie 24</a><br>
+<a href="z25_lesz.html" target="strony">zadanie 25</a><br>
 
 
 
@@ -51,6 +53,7 @@
   <a href="start.html" target="strony">start</a><br>
 <a href="kod_z13.html" target="strony">kod do zad 13</a><br>
 <a href="kod_z15.html" target="strony">kod do zad 15</a><br>
+<a href="leszcz_z25_kod.html" target="strony">kod do zad 25</a><br>
 
 
  </tr>
