--- a/z25_lesz.html
+++ b/z25_lesz.html
@@ -2,7 +2,7 @@
 <head>
 <title> Właściwości czcionek- Rogowska</title>
 <meta charset="utf-8">
-<link rel="stylesheet"  type="text/CSS"  href="rogo_z25.css">
+<link rel="stylesheet"  type="text/CSS"  href="leszcz_z25.css">
 </head>
 <body>
 <p id="nr1"> Martyna Leszczyńska układ 1 </p>
