--- a/z25_lesz.html
+++ b/z25_lesz.html
@@ -46,7 +46,7 @@ Zdanie 3 -grubość czcionki: 900; sposób kodowania rozmiaru czcionek: large; t
 <p id="zda3">HTML (Hypertext Markup Language) jest to kod używany do tworzenia struktury strony i jej zawartości</p>
 
 
-<p id="nr3"> Anna Rogowska klasa 1P układ 1</p></br>
+<p id="nr3"> Martyna Leszczyńska 2f układ 1</p></br>
 <p id="nr4">Akapit 2</p>
 <p>
 rodzina czcionki 1 (patrz tabela "Sposób kodowania rodziny czcionek") czyli - sans-serif<br><br>
