--- a/z25_lesz.html
+++ b/z25_lesz.html
@@ -2,7 +2,7 @@
 <head>
 <title> Właściwości czcionek- Rogowska</title>
 <meta charset="utf-8">
-<link rel="stylesheet"  type="text/CSS"  href="leszcz_z25.css">
+<link rel="stylesheet"  type="text/CSS"  href="rogo_z25.css">
 </head>
 <body>
 <p id="nr1"> Martyna Leszczyńska układ 1 </p>
@@ -46,7 +46,7 @@ Zdanie 3 -grubość czcionki: 900; sposób kodowania rozmiaru czcionek: large; t
 <p id="zda3">HTML (Hypertext Markup Language) jest to kod używany do tworzenia struktury strony i jej zawartości</p>
 
 
-<p id="nr3"> Martyna Leszczyńska 2f układ 1</p></br>
+<p id="nr3"> Martyna Leszczynska 2f układ 1</p></br>
 <p id="nr4">Akapit 2</p>
 <p>
 rodzina czcionki 1 (patrz tabela "Sposób kodowania rodziny czcionek") czyli - sans-serif<br><br>
