--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 <a href="zadanie21_lesz.html" target="strony">zadanie 21</a><br>
 <a href="zadanie22_lesz.html" target="strony">zadanie 22</a><br>
 <a href="leszc_z24.html" target="strony">zadanie 24</a><br>
-<a href="z25_lesz.html" target="strony">zadanie 25</a><br>
+<a href="z32.html" target="strony">zadanie 25</a><br>
+<a href="z33.html" target="strony">zadanie 25</a><br>
+<a href="z34.html" target="strony">zadanie 25</a><br>
+<a href="z35.html" target="strony">zadanie 25</a><br>
 
 
 
@@ -54,7 +57,9 @@
 <a href="kod_z13.html" target="strony">kod do zad 13</a><br>
 <a href="kod_z15.html" target="strony">kod do zad 15</a><br>
 <a href="leszcz_z25_kod.html" target="strony">kod do zad 25</a><br>
-
+<a href="lesz_kod_z32.html" target="strony">kod do zad 32</a><br>
+<a href="kod_z33.html" target="strony">kod do zad 33</a><br>
+<a href="kod_z35.html" target="strony">kod do zad 35</a><br>
 
  </tr>
 </table>
