--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <a href="kod_z13.html" target="strony">kod do zad 13</a><br>
 <a href="kod_z15.html" target="strony">kod do zad 15</a><br>
 <a href="leszcz_z25_kod.html" target="strony">kod do zad 25</a><br>
-<a href="lesz_kod_z32.html" target="strony">kod do zad 32</a><br>
-<a href="kod_z33.html" target="strony">kod do zad 33</a><br>
-<a href="kod_z35.html" target="strony">kod do zad 35</a><br>
+<a href="lesz_z32_kod.html" target="strony">kod do zad 32</a><br>
+<a href="z33_kod.html" target="strony">kod do zad 33</a><br>
+<a href="z35_kod.html" target="strony">kod do zad 35</a><br>
 
  </tr>
 </table>
